Upgrade upload file, fix some css

--- a/frontend/src/components/global-styles/main.scss
+++ b/frontend/src/components/global-styles/main.scss
@@ -18,6 +18,7 @@
     --primary-color-button: #3b82f6;
 
     --primary-width-app: 1200px; /* 1203px *  0.792888889 */
+    --primary-width-content-app: 1200px; /* 1203px *  0.792888889 */
 }
 // :root {
 //     --primary-font: 'Montserrat', sans-serif;
