--- a/frontend/src/pages/Generate/components/Stats.module.scss
+++ b/frontend/src/pages/Generate/components/Stats.module.scss
@@ -4,6 +4,8 @@
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    max-width: var(--primary-width-content-app);
+    margin-top: 50px;
 
     // Stats Overview
     .stats-overview-container {
