--- a/frontend/src/pages/Generate/components/Form.module.scss
+++ b/frontend/src/pages/Generate/components/Form.module.scss
@@ -1,11 +1,80 @@
 .code-generation-container  { 
-    max-width: 800px;
-    margin: 3px auto; 
+    height: 100vh; 
+    max-width: var(--primary-width-content-app);
+    min-width: 600px;
+    margin: 20px auto; 
     display: flex;
     flex-direction: column;
     align-items: stretch;
     justify-content: flex-start;
-    row-gap: 10px;
+    row-gap: 15px;
+
+    .upload-section {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 20px;
+        padding: 30px 0 30px;
+        // background: #3498db;
+        border-radius: 8px;
+        // box-shadow: 0 2px 15px 4px rgba(0, 0, 0, 0.1);
+        background: transparent !important;
+
+        .file-upload {
+            display: flex;
+            justify-content: space-between;
+            align-items: center; 
+
+            .file-input {
+                display: none;
+            }
+
+            .upload-label {
+                padding: 12px 24px;
+                background-color: #27ae60;
+                color: white;
+                border-radius: 6px;
+                cursor: pointer;
+                transition: background-color 0.2s;
+
+                &:hover {
+                    background-color: #27ae60;
+                }
+            }
+            
+            .template {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                column-gap: 20px;
+    
+                label {
+                    flex: 1;
+                    font-size: 1rem;
+                    font-weight: 500;
+                    color: #2c3e50;
+                    font-style: italic;
+                    text-align: right;
+                }
+                
+                .file-template_cluster {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: space-between;
+                    column-gap: 15px;
+    
+                    img {
+                        width: 30px;
+                        height: 30px;
+                    }
+                }
+            }
+        }
+
+
+    }
     
     .form-section {
         display: flex;
@@ -124,7 +193,7 @@
         color: white;
         border: none;
         border-radius: 8px;
-        padding: 15px 30px;
+        padding: 18px 30px;
         font-size: 16px;
         cursor: pointer;
         width: 100%;
