--- a/frontend/src/components/dropdown/Dropdown.module.scss
+++ b/frontend/src/components/dropdown/Dropdown.module.scss
@@ -29,6 +29,11 @@
     font-size: 1.2rem;
     transition: transform 0.3s ease;
     transform: translateY(0.15rem);
+
+    img {
+        width: 1rem;
+        height: 1rem;
+    }   
 } 
 
 .dropdown-menu {
