--- a/frontend/src/components/scroll-to-top/ScrollToTop.module.scss
+++ b/frontend/src/components/scroll-to-top/ScrollToTop.module.scss
@@ -14,9 +14,10 @@
     justify-content: center;
 }
 
-.scroll-to-top-button >span {
-    font-size: 30px;
-    color: #fff;
+.scroll-to-top-button >img {
+    width: 1.5rem;
+    height: 1.5rem;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg);
 }
 
 .scroll-to-top-button.show {
