--- a/frontend/src/pages/Generate/components/Form.module.scss
+++ b/frontend/src/pages/Generate/components/Form.module.scss
@@ -146,6 +146,11 @@
                             background-color: #95a5a6;
                             cursor: not-allowed;
                         }
+                        img {
+                            width: 1rem;
+                            height: 1rem;
+                            filter: invert(100%);
+                        }
                     }
                 }
 
@@ -160,12 +165,12 @@
                         flex-direction: row;
                         align-items: center;
                         justify-content: center;
-                        column-gap: 5px;
+                        column-gap: 8px;
                         background: #28a745;
                         color: white;
                         border: none;
                         border-radius: 8px;
-                        padding: 10px 20px;
+                        padding: 14px 34px;
                         cursor: pointer;
                     
                         &:hover:not(:disabled) {
@@ -175,11 +180,14 @@
                         &:disabled {
                             background-color: #95a5a6;
                             cursor: not-allowed;
-                        }
-                    
-                        ion-icon, 
+                        } 
                         span {
                             font-size: 1rem;
+                        }
+                        img {
+                            width: 1rem;
+                            height: 1rem;
+                            filter: invert(100%);
                         }
                     }
                 }
