--- a/frontend/src/pages/Generate/components/Stats.module.scss
+++ b/frontend/src/pages/Generate/components/Stats.module.scss
@@ -111,6 +111,7 @@
                     border: none;
                     cursor: pointer;
                     transition: background-color 0.2s;
+                    padding: 0.5rem;
 
                     &:disabled {
                         background-color: #bdc3c7;
@@ -122,8 +123,10 @@
                         background-color: #bed4e9;
                     }
 
-                    ion-icon {
-                        font-size: 2rem;
+                    img {
+                        width: 1rem;
+                        height: 1rem;
+                        filter: invert(40%) sepia(100%) saturate(2000%) hue-rotate(180deg);
                     }
                 }
             }
